--- a/static/index.html
+++ b/static/index.html
@@ -1,67 +1,236 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="https://cdn.canvasjs.com/canvasjs.stock.min.js"></script>
-    <script type="text/javascript">
-    window.onload = function () {
-        $.getJSON("outputs/oil_database.json", function(data) {
-            let chartData = {};
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Stock Analysis: Oil Sector</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <style>
+        body {
+            background-color: #121212;
+            color: #e0e0e0;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 10;
+        }
+        h1 {
+            color: #ffffff;
+        }
+        .menu {
+            margin: 20px 0;
+        }
+        .menu button {
+            margin: 10px;
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #1f1f1f;
+            color: #ffffff;
+            border: none;
+            cursor: pointer;
+        }
+        .menu button:hover {
+            background-color: #333333;
+        }
+        .chart-container {
+            display: flex;
+            flex-wrap: wrap; /* Allows wrapping if the content overflows */
+            justify-content: center; /* Center all items */
+            background-color: #333333;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            margin: 20px auto;
+            width: 90%;
+            border: 1px solid #444444;
+        }
+
+        .chart-row {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 50px;
+        }
+        .chart-item {
+            width: 45%;
+            margin: 0 20px;
+        }
+        footer {
+            background-color: #1f1f1f;
+            color: #ffffff;
+            padding: 20px;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+        .footer-box {
+            display: flex;
+            justify-content: space-between;
+            margin: 0;
+            max-width: 2200px;
             
-            data.oil_data.forEach(function(item) {
-                if (!chartData[item.Company]) {
-                    chartData[item.Company] = [];
-                }
-                chartData[item.Company].push({
-                    x: new Date(item.Quarter),
-                    y: parseFloat(item['Percentage Change'])
-                });
-            });
-
-            let dataSeries = [];
-            for (let company in chartData) {
-                dataSeries.push({
-                    type: "line",
-                    name: company,
-                    showInLegend: true,
-                    yValueFormatString: "#,##0.00'%'",
-                    dataPoints: chartData[company]
-                });
-            }
-
-            let chart = new CanvasJS.Chart("chartContainer", {
-                animationEnabled: true,
-                theme: "light2",
-                title: {
-                    text: "Quarterly Percentage Change per Company (Oil)"
-                },
-                axisX: {
-                    valueFormatString: "YYYY-MM"
-                },
-                axisY: {
-                    title: "Percentage Change",
-                    suffix: "%"
-                },
-                legend: {
-                    cursor: "pointer",
-                    itemclick: function(e) {
-                        if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
-                            e.dataSeries.visible = false;
-                        } else {
-                            e.dataSeries.visible = true;
-                        }
-                        e.chart.render();
-                    }
-                },
-                data: dataSeries
-            });
-
-            chart.render();
-        });
-    }
-    </script>
+        }
+        .footer-box div {
+            text-align: center;
+            padding: 0 80px; /* Add horizontal padding between the divs */
+        }
+        footer b {
+            display: block;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-    <div id="chartContainer" style="height: 500px; width: 100%;"></div>
+    <h1>Stock Analysis: Oil Sector</h1>
+
+    <!-- Navigation Menu -->
+    <div class="menu">
+        <button onclick="window.location.href='#'">Index Page</button>
+        <button onclick="showOilCharts()">Oil Stock</button>
+        <button onclick="window.location.href='#'">Telecom Stock</button>
+    </div>
+
+    <!-- Oil Charts -->
+    <div id="oilCharts" class="chart-container">
+        <div class="chart-row">
+            <div id="oilPercentageChange" class="chart-item">
+                <canvas id="oilPercentageChangeChart"></canvas>
+            </div>
+            <div id="oilVolume" class="chart-item">
+                <canvas id="oilVolumeChart"></canvas>
+            </div>
+        </div>
+        <div class="chart-row">
+            <div id="oilVolatility" class="chart-item">
+                <canvas id="oilVolatilityChart"></canvas>
+            </div>
+            <div id="oilCumulativeROI" class="chart-item">
+                <canvas id="oilCumulativeROIChart"></canvas>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="footer-box">
+            <div>
+                <h4>Team Members</h4>
+                Cassio Sperb, Juan Avila, Kendall Burkett, Patricia Taylor, Rahmeen Zindani
+            </div>
+            <div>
+                <h4>Project</h4>
+                Data Visualization Track<br>
+            </div>
+            <div>
+                <h4>University of Texas</h4>
+                Bootcamp in Data Analytics<br>
+            </div>
+        </div>
+    </footer>
+
+    <script>
+        // Load the data and render the charts
+        window.onload = function () {
+            // Load the oil data
+            d3.json("../data/outputs/oil_database.json").then(function(oilData) {
+                renderOilCharts(oilData);
+            });
+        };
+
+        // Function to show Oil Charts
+        function showOilCharts() {
+            document.getElementById("oilCharts").style.display = "block";
+        }
+
+        // Function to render oil charts
+        function renderOilCharts(data) {
+            var labels = [];
+            var oilPercentageChange = [];
+            var oilVolume = [];
+            var oilVolatility = [];
+            var oilCumulativeROI = [];
+
+            data.oil_data.forEach(function(d) {
+                labels.push(d.Quarter);
+                oilPercentageChange.push(d["Percentage Change"]);
+                oilVolume.push(d.Volume / 100000000); // Convert to Hundreds of Millions
+                oilVolatility.push(d.Volatility);
+                oilCumulativeROI.push(d["Cumulative ROI on $1500 ($)"]);
+            });
+
+            // Render all charts as "spline" (curved lines)
+            var options = {
+                type: 'line',
+                data: {
+                    labels: labels,
+                    datasets: []
+                },
+                options: {
+                    responsive: true,
+                    plugins: {
+                        legend: {
+                            display: false
+                        }
+                    },
+                    elements: {
+                        line: {
+                            tension: 0.4 // This makes the line curved (spline)
+                        }
+                    },
+                    scales: {
+                        x: {
+                            ticks: {
+                                color: '#ffffff'
+                            }
+                        },
+                        y: {
+                            ticks: {
+                                color: '#ffffff'
+                            }
+                        }
+                    }
+                }
+            };
+
+            // Oil Stock Percentage Change Chart
+            options.data.datasets = [{
+                label: 'Percentage Change',
+                backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                borderColor: 'rgba(75, 192, 192, 1)',
+                data: oilPercentageChange
+            }];
+            var ctx1 = document.getElementById('oilPercentageChangeChart').getContext('2d');
+            new Chart(ctx1, options);
+
+            // Oil Stock Volume Chart
+            options.data.datasets = [{
+                label: 'Volume (Hundreds of Millions)',
+                backgroundColor: 'rgba(255, 159, 64, 0.2)',
+                borderColor: 'rgba(255, 159, 64, 1)',
+                data: oilVolume
+            }];
+            var ctx2 = document.getElementById('oilVolumeChart').getContext('2d');
+            new Chart(ctx2, options);
+
+            // Oil Stock Volatility Chart
+            options.data.datasets = [{
+                label: 'Volatility',
+                backgroundColor: 'rgba(153, 102, 255, 0.2)',
+                borderColor: 'rgba(153, 102, 255, 1)',
+                data: oilVolatility
+            }];
+            var ctx3 = document.getElementById('oilVolatilityChart').getContext('2d');
+            new Chart(ctx3, options);
+
+            // Cumulative ROI on $1500 Chart
+            options.data.datasets = [{
+                label: 'Cumulative ROI on $1500 ($)',
+                backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                borderColor: 'rgba(54, 162, 235, 1)',
+                data: oilCumulativeROI
+            }];
+            var ctx4 = document.getElementById('oilCumulativeROIChart').getContext('2d');
+            new Chart(ctx4, options);
+        }
+    </script>
 </body>
 </html>
