--- a/static/index.html
+++ b/static/index.html
@@ -3,244 +3,137 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Analysis: Oil and Telecom Sectors</title>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <title>Stock Analysis: Oil and Telecom Sector</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #fff;
+            color: #000;
+        }
+        .container {
+            margin: 20px;
             text-align: center;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-            color: #000000;
-        }
-        h1 {
-            margin: 20px 0;
-            font-size: 24px;
-        }
-        .menu {
-            margin: 20px 0;
-        }
-        .menu select, .menu button {
-            padding: 10px;
-            font-size: 16px;
-            margin: 10px;
-        }
-        .menu button {
-            background-color: #555555;
-            color: #ffffff;
-            border: none;
-            cursor: pointer;
-        }
-        .menu button:hover {
-            background-color: #333333;
         }
         .chart-container {
-            background-color: #cccccc;
-            padding: 50px auto;
-            margin: 20px auto;
-            border-radius: 20px;
-            width: 90%;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            height: auto;
+            display: flex;
+            justify-content: space-between;
+            text-align: left;
         }
-        .chart-item {
+        .chart-box {
+            flex: 1;
+            margin-right: 20px;
+        }
+        table {
             width: 100%;
-            height: 500px;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        table, th, td {
+            border: 1px solid black;
+        }
+        th, td {
+            padding: 8px;
+            text-align: left;
+            background-color: #f1f1f1;
         }
         footer {
-            background-color: #333333;
-            color: #ffffff;
+            margin-top: 30px;
+            background-color: #f1f1f1;
             padding: 20px;
-            text-align: left;
+            text-align: center;
+            color: #000;
         }
         .footer-box {
             display: flex;
             justify-content: space-around;
-            margin: 0 auto;
-            padding: 0 20px;
         }
-        .footer-box div {
-            text-align: left;
+        h4 {
+            margin: 10px 0;
+            background-color: #f1f1f1;          
         }
-        .dark-mode {
-            background-color: #121212;
-            color: #e0e0e0;
+        .dropdown-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
         }
-        .dark-mode .chart-container {
-            background-color: #444444;
+        select[multiple], select {
+            width: 200px;
+            height: 35px;
+            text-align: center;
+            background-color: #f1f1f1;
         }
-        .dark-mode footer {
-            background-color: #1f1f1f;
-            color: #ffffff;
+        select[multiple] {
+            height: 105px;
+            width: 250px;
         }
     </style>
 </head>
 <body>
-    <h1>Stock Analysis: Oil and Telecom Sectors</h1>
+    <div class="container">
+        <h1>Stock Analysis: Oil and Telecom Sector</h1>
 
-    <!-- Drop-down for theme selection -->
-    <div class="menu">
-        <select id="chartTheme" onchange="toggleCharts()">
-            <option value="sectorComparison">Sector Comparison</option>
-            <option value="companyComparison">Company Comparison</option>
-            <option value="volume">Volume</option>
-            <option value="volatility">Volatility</option>
-            <option value="roi">Cumulative ROI</option>
-        </select>
-        <button onclick="redirectToInvestmentRank()">Investment Rank</button>
-        <button onclick="toggleMode()">Toggle Dark/Light Mode</button>
-    </div>
-
-    <!-- Chart Container for displaying one chart -->
-    <div id="chartContainer" class="chart-container">
-        <div id="comparisonChart" class="chart-item"></div>
-    </div>
-
-    <footer>
-        <div class="footer-box">
+        <div class="dropdown-container">
             <div>
-                <h4>Team Members</h4>
-                Cassio Sperb, Juan Avila, Kendall Burkett, Patricia Taylor, Rahmeen Zindani
+                <label for="sectorMetric">Choose a metric:</label>
+                <select id="sectorMetric" onchange="updateCharts()">
+                    <option value="Percentage Change">Percentage Change</option>
+                    <option value="Volume">Volume</option>
+                    <option value="Volatility">Volatility</option>
+                    <option value="Cumulative ROI on $1500 ($)">Return of Investment</option>
+                </select>
             </div>
+
             <div>
-                <h4>Project</h4>
-                Data Visualization Track<br>
-            </div>
-            <div>
-                <h4>University of Texas</h4>
-                Bootcamp in Data Analytics<br>
+                <label for="companyFilter">Select Companies:</label>
+                <select id="companyFilter" multiple onchange="updateCharts()">
+                    <!-- Company options will be dynamically added -->
+                </select>
             </div>
         </div>
-    </footer>
 
-    <script>
-        // Load Google Charts
-        google.charts.load('current', { packages: ['corechart'] });
+        <h2>Sector and Company Comparison</h2>
+        <div class="chart-container">
+            <div class="chart-box">
+                <canvas id="sectorChart" width="400" height="200"></canvas>
+            </div>
+            <div class="chart-box">
+                <canvas id="companyChart" width="400" height="200"></canvas>
+            </div>
+        </div>
 
-        // Toggle between dark mode and light mode
-        function toggleMode() {
-            document.body.classList.toggle('dark-mode');
-        }
+        <h2>Return of Investment | Results of 2022Q4</h2>
+        <table id="roiTable">
+            <thead>
+                <tr>
+                    <th>Company</th>
+                    <th>Cumulative ROI (%)</th>
+                    <th>Cumulative ROI on $1500 ($)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Data will be inserted here -->
+            </tbody>
+        </table>
 
-        // Redirect to the investment rank subpage
-        function redirectToInvestmentRank() {
-            window.location.href = 'investment_rank.html';
-        }
+        <footer>
+            <div class="footer-box">
+                <div>
+                    <h4>Team Members</h4>
+                    Cassio Sperb, Juan Avila, Kendall Burkett, Patricia Taylor, Rahmeen Zindani
+                </div>
+                <div>
+                    <h4>Project</h4>
+                    Data Visualization Track<br>
+                </div>
+                <div>
+                    <h4>University of Texas</h4>
+                    Bootcamp in Data Analytics<br>
+                </div>
+            </div>
+        </footer>
+    </div>
 
-        // Function to load and render charts based on theme
-        function toggleCharts() {
-            const theme = document.getElementById("chartTheme").value;
-            if (theme === 'sectorComparison') {
-                loadSectorComparisonChart();
-            } else if (theme === 'companyComparison') {
-                loadCompanyComparisonChart();
-            }
-        }
-
-        // Load both oil and telecom data for sector comparison (one line per sector)
-        function loadSectorComparisonChart() {
-            Promise.all([
-                d3.json("../data/outputs/oil_database.json"),
-                d3.json("../data/outputs/telecom_database.json")
-            ]).then(([oilData, telecomData]) => {
-                const oilSectorAvg = aggregateBySector(oilData.oil_data);
-                const telecomSectorAvg = aggregateBySector(telecomData.telecom_data);
-                renderSectorComparisonChart(oilSectorAvg, telecomSectorAvg);
-            });
-        }
-
-        // Aggregate data by sector for sector comparison
-        function aggregateBySector(data) {
-            const quarters = [...new Set(data.map(d => d.Quarter))];
-            return quarters.map(quarter => {
-                const quarterData = data.filter(d => d.Quarter === quarter);
-                const avgChange = quarterData.reduce((sum, d) => sum + d["Percentage Change"], 0) / quarterData.length;
-                return { quarter, avgChange };
-            });
-        }
-
-        // Render sector comparison chart
-        function renderSectorComparisonChart(oilData, telecomData) {
-            let dataTable = new google.visualization.DataTable();
-            dataTable.addColumn('string', 'Quarter');
-            dataTable.addColumn('number', 'Oil Sector');
-            dataTable.addColumn('number', 'Telecom Sector');
-
-            oilData.forEach((d, i) => {
-                const telecomChange = telecomData[i] ? telecomData[i].avgChange : null;
-                dataTable.addRow([d.quarter, d.avgChange, telecomChange]);
-            });
-
-            const options = {
-                title: 'Sector Comparison: Percentage Change',
-                curveType: 'function',
-                legend: { position: 'bottom' },
-                backgroundColor: { fill: '#cccccc' },
-                hAxis: { title: 'Quarter' },
-                vAxis: { title: 'Percentage Change (%)' },
-                chartArea: { width: '80%', height: '70%' },
-                gridlines: { color: '#e0e0e0', count: 5 }
-            };
-
-            const chart = new google.visualization.LineChart(document.getElementById('comparisonChart'));
-            chart.draw(dataTable, options);
-        }
-
-        // Load both oil and telecom data for company comparison (one line per company)
-        function loadCompanyComparisonChart() {
-            Promise.all([
-                d3.json("../data/outputs/oil_database.json"),
-                d3.json("../data/outputs/telecom_database.json")
-            ]).then(([oilData, telecomData]) => {
-                const combinedData = [
-                    ...oilData.oil_data.map(d => ({ ...d, sector: 'Oil' })),
-                    ...telecomData.telecom_data.map(d => ({ ...d, sector: 'Telecom' }))
-                ];
-                renderCompanyComparisonChart(combinedData);
-            });
-        }
-
-        // Render company comparison chart (one line per company)
-        function renderCompanyComparisonChart(data) {
-            let dataTable = new google.visualization.DataTable();
-            dataTable.addColumn('string', 'Quarter');
-
-            const companies = [...new Set(data.map(d => d.Company))];
-            companies.forEach(company => {
-                dataTable.addColumn('number', company);
-            });
-
-            const quarters = [...new Set(data.map(d => d.Quarter))];
-            quarters.forEach(quarter => {
-                const row = [quarter];
-                companies.forEach(company => {
-                    const companyData = data.find(d => d.Quarter === quarter && d.Company === company);
-                    row.push(companyData ? companyData["Percentage Change"] : null);
-                });
-                dataTable.addRow(row);
-            });
-
-            const options = {
-                title: 'Company Comparison: Percentage Change',
-                curveType: 'function',
-                legend: { position: 'bottom' },
-                backgroundColor: { fill: '#cccccc' },
-                hAxis: { title: 'Quarter' },
-                vAxis: { title: 'Percentage Change (%)' },
-                chartArea: { width: '80%', height: '70%' },
-                gridlines: { color: '#e0e0e0', count: 5 }
-            };
-
-            const chart = new google.visualization.LineChart(document.getElementById('comparisonChart'));
-            chart.draw(dataTable, options);
-        }
-
-        // Initialize with sector comparison chart on page load
-        google.charts.setOnLoadCallback(function() {
-            loadSectorComparisonChart();
-        });
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
